--- a/app/dynFormTemplates/label.jade
+++ b/app/dynFormTemplates/label.jade
@@ -1,3 +1,5 @@
-div(class="{{fields[fieldIndex].getLabelClass(2)}}", ng-if="fields[fieldIndex].label != null && fields[fieldIndex].type != 'subform'")
+div(class="{{fields[fieldIndex].getLabelClass()}}", ng-if="fields[fieldIndex].label != null && fields[fieldIndex].type != 'subform'")
+
   div(ng-show="fields[fieldIndex].type != 'group'")
+
     label.control-label(dyn-id="{{fields[fieldIndex].domId('label', $index)}}", name="{{fields[fieldIndex].domName('label', $index)}}") {{fields[fieldIndex].label}}
