--- a/app/modules/editor/partials/includes/component-template.jade
+++ b/app/modules/editor/partials/includes/component-template.jade
@@ -1,10 +1,11 @@
-div(id="component-popover_{{c._id}}", data-content="{{c.desc}}", data-container="body")
-  table(id="component-element_{{c._id}}", width="100%", ng-model="c", ng-mouseenter="showpopup(c)", ng-mouseleave="hidepopup(c)")
+div(ui-tree-handle)
 
-    include component-color-template
+  div(id="component-popover_{{c._id}}", data-content="{{c.desc}}", data-container="body")
 
-    include component-icon-template
+    table.component(id="component-element_{{c._id}}", width="100%", ng-model="c", ng-mouseenter="showpopup(c)", ng-mouseleave="hidepopup(c)", render-component="c")
 
-    include component-label-template
+      include component-color-template
 
-    span(ng-show="c.doRender(); return(true);")
+      include component-icon-template
+
+      include component-label-template
