--- a/app/modules/editor/partials/includes/node-modified-template.jade
+++ b/app/modules/editor/partials/includes/node-modified-template.jade
@@ -1,1 +1,1 @@
-td.node-modified-color(id="node-modified-color_{{n.id()}}", width="6px", ng-show="n.isModified()")
+td.node-modified-color(id="node-modified-color_{{n.id()}}", ng-show="n.isModified()", style="width: 6px; min-width: 6px;")
