--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -52,6 +52,7 @@
 @import "bower_components/bootstrap/less/responsive-utilities.less";
 
 // Extra custom styles
+@import "index";
 @import "loader";
 @import "ribbon";
 @import "layered-paper";
