--- a/server/views/forgot.jade
+++ b/server/views/forgot.jade
@@ -1,28 +1,35 @@
 extend layout
 
 block content
-  .container
+  .container#forgot
     #loginbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
+
       .panel.panel-default
+
         .panel-heading
           .panel-title Forgot password
           div(style='float: right; font-size: 80%; position: relative; top: -10px;')
             a(href='/login') Sign in
+
         .panel-body(style='padding-top: 30px;')
           #login-alert.alert.alert-danger.col-sm-12(style='display: none;')
+
           form#loginform.form-horizontal(role='form', action="/forgot", method="post")
             input(type="hidden", name="_csrf", value="#{csrftoken}")
-            .input-group(style='margin-bottom: 25px;')
-              span.input-group-addon
-                i.fa.fa-user
-              input#login-username.form-control(type='text', name='username', value='', placeholder='Username', required)
-            .form-group(style='margin-top: 10px;')
+
+            .form-group
+              .input-group
+                input#login-username.form-control(type='text', name='username', value='', placeholder='Username', required)
+                span.input-group-addon
+                  i.cic.cic-user32
+
+            .form-group
               .col-sm-12.controls
-                input.btn.btn-success(type="submit", value="Submit")
+                input.btn.btn-primary(type="submit", value="Submit")
+
             .form-group
               .col-md-12.control
                 div(style='border-top: 1px solid#888; padding-top: 15px;')
-                  | Don't have an account? &nbsp;&nbsp;&nbsp;
+                  | Don't have an account?&nbsp;
                   a(href="/signup")
-                    i.fa.fa-list-alt
-                    | &nbsp;Register Here
+                    | Register Here
