--- a/app/modules/editor/partials/editor.module.jade
+++ b/app/modules/editor/partials/editor.module.jade
@@ -1,11 +1,27 @@
-form#editor-modules-search(role='search')
-  .form-group
-    .input-group
-      input.form-control(type='text', placeholder='Search', ng-model="search")
-      span.input-group-btn
-        button.btn.btn-default(type="button")
-          span.cic.cic-search
+#editor-modules-root
 
-#editor-modules-list(ng-repeat="m in list() | filter: search")
+  form#editor-modules-search(role='search')
+    .form-group
+      .input-group.input-group-sm
+        input.form-control(type='text', placeholder='Search', ng-model="search", clearable)
+        span.searchclear &times;
+        span.input-group-btn.hidden-xs
+          button.btn.btn-default(type="button")
+            span.cic.cic-search
 
-  include includes/module-template
+  .hidden-xs#editor-modules
+
+    .modules
+      #editor-modules-list
+        .modules-tree(ui-tree="treeOptions", data-drag-enabled="false", data-empty-place-holder-enabled="false", data-max-depth="1", data-drag-delay="250", ng-cloak)
+          ol(ui-tree-nodes="", ng-model="moduleNodes", id="tree-modules-root", data-nodrop)
+            li(ng-repeat="m in moduleNodes | filter: search", ui-tree-node, ng-include="'/partials/module-template.html'")
+
+
+  .visible-xs#editor-modules-xs
+
+    .modules-xs
+      #editor-modules-xs-list
+        .modules-tree(ui-tree="treeOptions", data-drag-enabled="false", data-empty-place-holder-enabled="false", data-max-depth="1", data-drag-delay="250", ng-cloak)
+          ol(ui-tree-nodes="", ng-model="moduleNodes", id="tree-modules-root", data-nodrop)
+            li(ng-repeat="m in moduleNodes | filter: search", ui-tree-node, ng-include="'/partials/module-xs-template.html'")
