--- a/app/modules/editor/partials/includes/component-color-template.jade
+++ b/app/modules/editor/partials/includes/component-color-template.jade
@@ -1,1 +1,1 @@
-td(id="component-color_{{c._id}}", width="8px", class="{{c.getColor()}}-back")
+td.component-color(id="component-color_{{c._id}}", class="{{c.getColor()}}-back")
