--- a/app/modules/editor/partials/includes/component-label-template.jade
+++ b/app/modules/editor/partials/includes/component-label-template.jade
@@ -1,3 +1,3 @@
-td(id="component-label-col_{{c._id}}", style="padding:2px;")
+td.component-label-col(id="component-label-col_{{c._id}}")
 
-  span(id="component-label_{{c._id}}") {{c.name}}
+  span.component-label(id="component-label_{{c._id}}") {{c.displayName()}}
