--- a/app/modules/editor/partials/includes/component-xs-icon-template.jade
+++ b/app/modules/editor/partials/includes/component-xs-icon-template.jade
@@ -1,3 +1,3 @@
-td.component-icon-col(id="component-icon-col_{{c._id}}")
+td.component-xs-icon-col(id="component-icon-col_{{c._id}}")
 
-  span.component-icon.cic(id="component-icon_{{c._id}}", class="cic-{{c.getIcon()}}")
+  span.component-xs-icon.cic(id="component-icon_{{c._id}}", class="cic-{{c.getIcon()}}")
