--- a/app/modules/editor/partials/includes/component-xs-template.jade
+++ b/app/modules/editor/partials/includes/component-xs-template.jade
@@ -2,10 +2,6 @@ div(ui-tree-handle)
 
   div(id="component-popover_{{c._id}}", data-content="{{c.desc}}", data-container="body")
 
-    table.component(id="component-element_{{c._id}}", width="100%", ng-model="c", ng-mouseenter="showpopup(c)", ng-mouseleave="hidepopup(c)", render-component="c")
+    table.component-xs(id="component-element_{{c._id}}", width="100%", ng-model="c", ng-mouseenter="showpopup(c)", ng-mouseleave="hidepopup(c)", render-component="c")
 
-      include component-color-template
-
-      include component-icon-template
-
-      include component-label-template
+      include component-xs-icon-template
