--- a/app/modules/editor/partials/includes/module-color-template.jade
+++ b/app/modules/editor/partials/includes/module-color-template.jade
@@ -1,1 +1,1 @@
-td.module-color(id="module-color_{{m._id}}", width="8px", class="{{m.getColor()}}-back")
+td.module-color(id="module-color_{{m._id}}", class="{{m.getColor()}}-back")
