--- a/app/modules/editor/partials/includes/module-label-template.jade
+++ b/app/modules/editor/partials/includes/module-label-template.jade
@@ -1,3 +1,3 @@
-td.module-label-col(id="module-label-col_{{m._id}}", style="padding: 2px;")
+td.module-label-col(id="module-label-col_{{m._id}}")
 
-  span.module-label(id="module-label_{{m._id}}") {{m.name}}
+  span.module-label(id="module-label_{{m._id}}") {{m.displayName()}}
