--- a/app/modules/editor/partials/includes/module-modified-template.jade
+++ b/app/modules/editor/partials/includes/module-modified-template.jade
@@ -1,1 +1,1 @@
-td.module-modified-color(id="module-modified-color_{{m._id}}", align="right", width="6px", style="padding: 2px;", ng-show="m.isModified()")
+td(id="module-modified-color_{{m._id}}", ng-class="{ 'module-not-modified-color': !m.isModified(), 'module-modified-color': m.isModified() }")
