--- a/app/modules/editor/partials/includes/module-version-template.jade
+++ b/app/modules/editor/partials/includes/module-version-template.jade
@@ -1,3 +1,3 @@
-td.module-version-col(id="module-version-col_{{m._id}}", align="right", style="padding: 2px;")
+td.module-version-col(id="module-version-col_{{m._id}}")
 
   span.module-version(id="module-version_{{m._id}}") {{m.versionString()}}
