--- a/app/modules/editor/partials/includes/module-xs-color-template.jade
+++ b/app/modules/editor/partials/includes/module-xs-color-template.jade
@@ -1,1 +1,1 @@
-td.module-color(id="module-color_{{m._id}}", class="{{m.getColor()}}-back", style="width: 8px; min-width: 8px;")
+td.module-xs-color(id="module-color_{{m._id}}", class="{{m.getColor()}}-back")
