--- a/app/modules/editor/partials/includes/module-xs-icon-template.jade
+++ b/app/modules/editor/partials/includes/module-xs-icon-template.jade
@@ -1,3 +1,3 @@
-td.module-icon-col(id="module-icon-col_{{m._id}}", valign="middle", style="padding: 2px; width: 24px; min-width: 24px;")
+td.module-xs-icon-col(id="module-icon-col_{{m._id}}")
 
-  span.module-icon.cic(id="module-icon_{{m._id}}", class="cic-{{m.getIcon()}}", style="font-size: 18px;")
+  span.module-xs-icon.cic(id="module-icon_{{m._id}}", class="cic-{{m.getIcon()}}")
