--- a/app/modules/editor/partials/includes/module-xs-shared-template.jade
+++ b/app/modules/editor/partials/includes/module-xs-shared-template.jade
@@ -1,3 +1,3 @@
-td.module-shared-col(id="module-share-col_{{m._id}}", align="right", ng-show="m.isShared()", style="padding: 2px;")
+td.module-xs-shared-col(id="module-share-col_{{m._id}}")
 
-  span.text-muted.module-shared-icon.cic(id="module-shared-icon_{{m._id}}", class="cic-cloud32")
+  span.module-xs-shared-icon.cic.cic-cloud32(id="module-shared-icon_{{m._id}}", ng-show="m.isShared()")
