--- a/app/modules/editor/partials/includes/node-parenticons-template.jade
+++ b/app/modules/editor/partials/includes/node-parenticons-template.jade
@@ -1,8 +1,10 @@
-td.node-parentIcons-col(id="node-parentIcons-col_{{n.id()}}", align="right", width="1px")
+td.node-parentIcons-col(id="node-parentIcons-col_{{n.id()}}", align="right")
 
   //span.text-muted.node-link-icon.cic(id="node-link-icon_{{n.id()}}", class="cic-link", ng-show="n.isLink() && !n.isShared()")
   //span.text-muted.node-shared-icon.cic(id="node-shared-icon_{{n.id()}}", class="cic-share23", ng-show="n.isShared()")
   //span.text-muted.node-sharing-icon.cic(id="node-sharing-icon_{{n.id()}}", class="cic-cloud32", ng-show="n.isSharing()")
 
-  span.node-parentIcons(ng-show="n.hasParentIcons() && n.isClosed()")
+  span.cic.cic-link32.node-link-icon(ng-show="n.isLink()")
+
+  span.node-parentIcons(ng-show="n.hasParentIcons() && n.isClosed() && !isEditing(n)")
     span.node-icon.node-parentIcon.cic(ng-repeat="cn in n.children()", ng-show="cn.getComponent().parentIcon()", class="cic-{{cn.getIcon()}}")
