--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -1,37 +1,50 @@
 extend layout
 
 block content
-  .container
+  .container#login
+
     #loginbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
+
       .panel.panel-default
+
         .panel-heading
           .panel-title Sign In
           div(style='float: right; font-size: 80%; position: relative; top: -10px;')
             a(href='/forgot') Forgot password?
+
         .panel-body(style='padding-top: 30px;')
+
           #login-alert.alert.alert-danger.col-sm-12(style='display: none;')
+
           form#loginform.form-horizontal(role='form', action="/login", method="post")
             input(type="hidden", name="_csrf", value="#{csrftoken}")
-            .input-group(style='margin-bottom: 25px;')
-              span.input-group-addon
-                i.fa.fa-user
-              input#login-username.form-control(type='text', name='username', value='', placeholder='username or email', required)
-            .input-group(style='margin-bottom: 25px;')
-              span.input-group-addon
-                i.fa.fa-lock
-              input#login-password.form-control(type='password', name='password', placeholder='password', required)
-            .input-group
-              .checkbox
-                label
-                  input#login-remember(type='checkbox', name='rememberme', value='1')
-                  | Remember me
-            .form-group(style='margin-top: 10px;')
+
+            .form-group
+              .input-group
+                input#login-username.form-control(type='text', name='username', value='', placeholder='username or email', required)
+                span.input-group-addon
+                  i.cic.cic-user32
+
+            .form-group
+              .input-group
+                input#login-password.form-control(type='password', name='password', placeholder='password', required)
+                span.input-group-addon
+                  i.cic.cic-lock32
+
+            .form-group
+              .input-group
+                .checkbox
+                  label
+                    input#login-remember(type='checkbox', name='rememberme', value='1')
+                    | Remember me
+
+            .form-group
               .col-sm-12.controls
-                input.btn.btn-success(type="submit", value="Login")
+                input.btn.btn-primary(type="submit", value="Login")
+
             .form-group
               .col-md-12.control
                 div(style='border-top: 1px solid#888; padding-top: 15px;')
-                  | Don't have an account? &nbsp;&nbsp;&nbsp;
+                  | Don't have an account?&nbsp;
                   a(href="/signup")
-                    i.fa.fa-list-alt
-                    | &nbsp;Register Here
+                    | Register Here
