--- a/server/views/signup.jade
+++ b/server/views/signup.jade
@@ -1,39 +1,66 @@
 extend layout
 
 block content
-  .container
+  .container#signup
     #registerbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
+
       .panel.panel-default
+
         .panel-heading
           .panel-title Register
           div(style='float: right; font-size: 85%; position: relative; top: -10px;')
             a#signinlink(href='/login') Sign In
+
         .panel-body
+
           form#signupform.form-horizontal(role='form', action="/signup", method="post")
             #signupalert.alert.alert-danger(style='display: none;')
               p Error:
               span
             input(type="hidden", name="_csrf", value="#{csrftoken}")
+
             .form-group
-              label.col-md-3.control-label(for='username') Username
-              .col-md-9
-                input.form-control(type='text', name='username', placeholder='Username', required)
+              label.col-md-4.control-label(for='username') Username
+              .col-md-8
+                .input-group
+                  input.form-control(type='text', name='username', placeholder='Username', required)
+                  span.input-group-addon
+                    i.cic.cic-user32
+
             .form-group
-              label.col-md-3.control-label(for='firstname') First Name
-              .col-md-9
+              label.col-md-4.control-label(for='firstname') First Name
+              .col-md-8
                 input.form-control(type='text', name='firstname', placeholder='First Name', required)
+
             .form-group
-              label.col-md-3.control-label(for='lastname') Last Name
-              .col-md-9
+              label.col-md-4.control-label(for='lastname') Last Name
+              .col-md-8
                 input.form-control(type='text', name='lastname', placeholder='Last Name', required)
+
             .form-group
-              label.col-md-3.control-label(for='email') Email
-              .col-md-9
-                input.form-control(type='email', name='email', placeholder='Email Address', required)
+              label.col-md-4.control-label(for='email') Email
+              .col-md-8
+                .input-group
+                  input.form-control(type='email', name='email', placeholder='Email Address', required)
+                  span.input-group-addon
+                    i.cic.cic-email22
+
             .form-group
-              label.col-md-3.control-label(for='password') Password
-              .col-md-9
-                input.form-control(type='password', name='password', placeholder='Password', required)
+              label.col-md-4.control-label(for='password') Password
+              .col-md-8
+                .input-group
+                  input.form-control(type='password', name='password', placeholder='Password', required)
+                  span.input-group-addon
+                    i.cic.cic-lock32
+
             .form-group
-              .col-md-offset-3.col-md-9
-                input.btn.btn-success(type="submit", value="Register")
+              label.col-md-4.control-label(for='re-password') Re-enter password
+              .col-md-8
+                .input-group
+                  input.form-control(type='password', name='re-password', placeholder='Password', required)
+                  span.input-group-addon
+                    i.cic.cic-lock32
+
+            .form-group
+              .col-md-offset-4.col-md-8
+                input.btn.btn-primary(type="submit", value="Register")
